<resources>
    <string name="app_name">Government Manager</string>
    <string name="votingObjectState">Ative</string>
    <string name="color">Color</string>
    <string name="partyCreated">Party créé</string>
    <string name="addparty">Add a party</string>
    <string name="editparty">Edit a party</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="addvotingobject">Add a voting object</string>
    <string name="home">Home</string>
    <string name="consult">Consult</string>
    <string name="partylist">Party list</string>
    <string name="politicianlist">Politicians list</string>
    <string name="votinglist">Voting objects list</string>
    <string name="vote">Vote</string>
    <string name="votingopenlist">Open voting object list</string>
    <string name="search">Search</string>
    <string name="voting">Voting</string>
    <string name="politician">Politician</string>
    <string name="party">Party</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="noaccount">Do not have an account ?</string>
    <string name="signup">Sign up</string>
    <string name="parties">Parties</string>
    <string name="politicians">Politicians</string>
    <string name="fistname">Firstname</string>
    <string name="poste">Position</string>
    <string name="email">Email address</string>
    <string name="confirmation">Confirmation</string>
    <string name="language">Change language</string>
    <string name="designation">Designation</string>
    <string name="result">Result</string>
    <string name="deleteVotingObjectTitle">Voting object removal</string>
    <string name="deletePartyTitle">Party removal</string>
    <string name="deleteVotingObjectMessage">Delete voting object ?</string>
    <string name="deletePartyMessage">Delete party ?</string>
    <string name="partyVotingObjectCreated">Voting object created</string>
    <string name="statut">State</string>
    <string name="delete">Delete</string>
    <string name="politicianCreated">Politician created</string>
    <string name="mdp">The confirmation does not match the password</string>
    <string name="tovote">To vote</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blank">Blank</string>
    <string name="voted">You have already voted</string>
    <string name="votingobjectedit">Voting object to edit</string>
    <string name="votingObjectNoDelete">Voting Object is used, cannot delete</string>
    <string name="partyNoDelete">Party is used, cannot delete</string>
    <string name="partyDeleted">Party deleted</string>
    <string name="reinitializeDB">Reinitialize data base</string>
</resources>
